# KBfit

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  DOCUMENTATION_SETUP.md  build.slurm  morningstar_physics.md  morningstar_physics.txt
.github/workflows/: docs.yml
data/: k-pi_scatteringDrew.smp
dev/: .buildinfo  changelog.html  contributing.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  physics_background.html  readme.html  search.html  searchindex.js
dev/.doctrees/: changelog.doctree  contributing.doctree  getting_started.doctree  index.doctree  installation.doctree  physics_background.doctree  readme.doctree
dev/_sources/: api.rst  contributing.rst  index.rst  installation.rst  physics_background.rst
docs/: Doxyfile  Makefile  changelog.rst  conf.py  getting_started.rst  index.rst  physics_background.rst  readme.rst
examples/: input_print_Kpi.xml  input_print_LL.xml  input_swave_single_channel_Kpi.xml  input_swave_single_channel_LL.xml  input_swave_single_channel_LL_J.xml
examples/KPiSingleChannelSWave/: Block0.csv  Block1.csv  Block2.csv  Block3.csv  Block4.csv
examples/LLSingleChannelSWave/: Block0.csv  LLSingleChannelSWave.hdf5
examples/LLSingleChannelSWaveJ/: Block0.csv  LLSingleChannelSWaveJ.hdf5
new_testing/: KPiPrintOmega.0  KPiPrintOmega.1  KPiPrintOmega.2  input_print_Kpi.xml  input_print_Kpi_noInv.xml  run_tests.slurm
new_testing/KPiPrint_Cayley/: KPiPrint_CayleyBoxMatrixImag_Omega.0  KPiPrint_CayleyImag_Eigenvals.1  KPiPrint_CayleyImag_Omega.0  KPiPrint_CayleyImag_Omega.1  KPiPrint_CayleyImag_Omega.2  KPiPrint_OmegaCayleyModulus_Omega.0
new_testing/KPiPrint_CayleyBoxMatrix/: KPiPrint_CayleyBoxMatrix_Eigenvals.0
new_testing/KPiPrint_CayleyBoxMatrixImag/: KPiPrint_CayleyBoxMatrixImag_Omega.0
new_testing/KPiPrint_CayleyImag/: KPiPrint_CayleyImag_Eigenvals.2
new_testing/KPiPrint_CayleyInv/: KPiPrint_CayleyInv_Eigenvals.0  KPiPrint_CayleyInv_Eigenvals.1  KPiPrint_CayleyInv_Omega.0  KPiPrint_CayleyInv_Omega.1  KPiPrint_CayleyInv_Omega.2
new_testing/KPiPrint_CayleyReal/: KPiPrint_CayleyReal_NonInteractingEnergies.2  KPiPrint_CayleyReal_Omega.1  KPiPrint_CayleyReal_Omega.2
new_testing/KPiPrint_Kinv/: KPiPrint_Kinv_Eigenvals.0  KPiPrint_Kinv_Eigenvals.1  KPiPrint_Kinv_Eigenvals.2  KPiPrint_Kinv_Omega.0  KPiPrint_Kinv_Omega.1  KPiPrint_Kinv_Omega.2
new_testing/KPiPrint_KinvB/: KPiPrint_KinvB_Eigenvals.0  KPiPrint_KinvB_Eigenvals.1  KPiPrint_KinvB_Eigenvals.2  KPiPrint_KinvB_Omega.0  KPiPrint_KinvB_Omega.2
new_testing/KPiPrint_KinvB_Reg/: KPiPrint_KinvB_Reg_Eigenvals.0  KPiPrint_KinvB_Reg_Eigenvals.1  KPiPrint_KinvB_Reg_Eigenvals.2  KPiPrint_KinvB_Reg_Omega.1
new_testing/KPiPrint_OmegaCayleyModulus/: KPiPrint_OmegaCayleyModulus_Omega.1  KPiPrint_OmegaCayleyModulus_Omega.2
new_testing/KPiPrint_OmegaK/: KPiPrint_OmegaK_Eigenvals.0  KPiPrint_OmegaK_Eigenvals.1  KPiPrint_OmegaK_Eigenvals.2  KPiPrint_OmegaK_Omega.0  KPiPrint_OmegaK_Omega.1  KPiPrint_OmegaK_Omega.2
new_testing/KPiPrint_OmegaKinv/: KPiPrint_OmegaKinv_Eigenvals.2  KPiPrint_OmegaKinv_Omega.0  KPiPrint_OmegaKinv_Omega.1  KPiPrint_OmegaKinv_Omega.2
new_testing/KPiPrint_Q1/: KPiPrint_Q1_Eigenvals.0  KPiPrint_Q1_Eigenvals.1  KPiPrint_Q1_Eigenvals.2  KPiPrint_Q1_NonInteractingEnergies.0  KPiPrint_Q1_NonInteractingEnergies.1  KPiPrint_Q1_NonInteractingEnergies.2  KPiPrint_Q1_Omega.0  KPiPrint_Q1_Omega.1  KPiPrint_Q1_Omega.2
new_testing/KPiPrint_Q2/: KPiPrint_Q2_Eigenvals.0  KPiPrint_Q2_Eigenvals.1  KPiPrint_Q2_Eigenvals.2  KPiPrint_Q2_Omega.0  KPiPrint_Q2_Omega.1  KPiPrint_Q2_Omega.2
new_testing/KPiPrint_V/: KPiPrint_V_Eigenvals.0  KPiPrint_V_Eigenvals.1  KPiPrint_V_Eigenvals.2
new_testing/test/: test_Eigenvals.0  test_Eigenvals.1  test_Eigenvals.2  test_Omega.1
scripts/: README.md  build_docs.sh  format_code.sh
source/analysis/: kbobs_handler.cc  kbobs_handler.h  matrix.cc  matrix.h  mc_estimate.cc  mc_estimate.h  sampling_info.cc  sampling_info.h  task_utils.cc  task_utils.h
source/data_handling/: array.h  bins_info.cc  bins_info.h  byte_handler.cc  byte_handler.h  data_io_handler.h  io_handler.cc  io_handler.h  io_handler_fstream.cc  io_handler_fstream.h  io_handler_hdf5.cc  io_handler_hdf5.h  io_map.h  io_map_base.h  io_map_fstream.h  io_map_hdf5.h  obs_get_handler.cc  obs_get_handler.h  samplings_handler.h
source/fitting/: chisq_base.cc  chisq_base.h  chisq_detres.cc  chisq_detres.h  chisq_fit.cc  chisq_fit.h  chisq_spectrum.cc  chisq_spectrum.h  minimizer.cc  minimizer.h  nl2sno.cc  root_finder.cc  root_finder.h
source/main/: KBfit.cc
source/observables/: encoder.cc  encoder.h  ensemble_info.cc  ensemble_info.h  kbobs_info.cc  kbobs_info.h  mcobs_info.cc  mcobs_info.h  momenta.cc  momenta.h
source/tasks/: args_handler.h  indicators.h  multi_compare.h  stopwatch.cc  stopwatch.h  task_fit.cc  task_handler.cc  task_handler.h  task_print.cc  task_single_channel.cc  xml_handler.cc  xml_handler.h
source/twohadronsinabox/: K_matrix_calc.cc  K_matrix_calc.h  K_matrix_info.cc  K_matrix_info.h  box_matrix.cc  box_matrix.h  box_matrix_ar.cc  (+14 more)
source_testing/: cnpy.cc  test_cayley_transform.cc  test_clone_methods.cc  test_hdf5_io.cc  test_param_registry.cc  test_quant_conds.cc  test_root_finder.cc
testing/: KBtestdata.0  KBtestdata.1  KPi2outEcmB.ens0  KPi2outsamplingsB  KPi2outsamplingsC  KPiPrintOmega.1  KPiPrintOmega.2  KPiPrintOmega2.0  KPiPrintOmega2.1  KPiPrintOmega2.2  XMLDAT  bootvsjack.mpl  chimera  crap  crap2  crap_jack  input_bins_info.xml  input_chisqdetres.xml  input_chisqdetres2.xml  input_chisqdetres2J.xml  input_chisqdetres2R.xml  input_chisqdetres3.xml  input_chisqdetres3J.xml  input_chisqdetres4.xml  input_chisqdetres5.xml  input_chisqdetres6.xml  input_chisqdetres7.xml  input_chisqdetres7B.xml  input_chisqdetres7C.xml  input_chisqdetres7D.xml  input_chisqdetres7J.xml  input_chisqdetres_Kpi_boot.xml  input_chisqdetres_Kpi_jack.xml  input_detresfit.xml  input_fit_Kpi2_boot.xml  input_fit_Kpi2_jack.xml  input_fit_Kpi2small_boot.xml  input_fit_Kpi_boot.xml  input_kbobs_info.xml  input_kfitparam.xml  (+19 more)
(+92 files in other folders)
